--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,6 +2,6 @@
 <h1>Welcome to the ShortenURL App</h1>
 <p>
   This is the home page for the
-  <a href="https://infinite-brushlands-71611.herokuapp.com/">ShortenURL</a>
+  <a href="https://ajmalurl.herokuapp.com/">ShortenURL</a>
   application.
 </p>
